k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voting-app
  labels:
    app: vote
  name: vote-green

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  replicas: 1

  selector:
    matchLabels:
      app: vote
      color: green

  template:
    metadata:
      labels:
        app: vote
        color: green

    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - vote
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        runAsNonRoot: true      
      automountServiceAccountToken: false
      serviceAccountName: vote-sa
      containers:
        - image: azam92/voting-app-vote:d764663e1cae261fb5a01d1e25643c3fbf126471
          name: vote-green

          ports:
            - containerPort: 8080
              name: vote-green
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3                

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
