k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: voting-app
spec:
  type: ClusterIP
  ports:
    - name: "vote-service"
      port: 8080
      targetPort: 8080
  selector:
    app: vote
    color: blue
